--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.56.1",
+    "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
     "next": "15.5.2",
     "react": "19.1.0",
